@@ -1,3 +1,11 @@
+2009-09-02	The InnoDB Team
+
+	* include/lock0lock.h, include/row0mysql.h, lock/lock0lock.c,
+	row/row0mysql.c:
+	Fix a regression introduced by the fix for MySQL bug#26316. We check
+	whether a transaction holds any AUTOINC locks before we acquire
+       	the kernel mutex and release those locks.
+
 2009-08-27	The InnoDB Team
 
 	* dict/dict0dict.c, include/dict0dict.h,
